Fix search bar alignment and viewport in mobile view

--- a/docs/ElunaDoc/static/main.css
+++ b/docs/ElunaDoc/static/main.css
@@ -527,12 +527,9 @@ pre.rust { position: relative; }
         display: none;
     }
 
-    .content {
+    nav, .content {
         margin-left: 0px;
-    }
-
-    nav.sub {
-        margin: 0 auto;
+        max-width: 100vw;
     }
 }
 
